--- a/index.html
+++ b/index.html
@@ -169,6 +169,25 @@
       />
     </div>
 
+    <!-- 色反転モード -->
+    <label>
+      <input type="checkbox" id="invertColor" />
+      Invert Color
+    </label>
+
+    <!-- 色反転モードのBPM設定 -->
+    <div class="input-group" id="invertColorBpmControl" style="display: none">
+      <label for="invertColorBpm">BPM for Invert Color:</label>
+      <input
+        type="number"
+        id="invertColorBpm"
+        value=""
+        min="60"
+        max="300"
+        oninput="sendToProjectionWindow()"
+      />
+    </div>
+
     <!-- ロゴのアップロード -->
     <div class="input-group">
       <label for="logoUpload">Upload Logo (GIF/PNG):</label>
@@ -201,6 +220,8 @@
       let logoList = []; // ロゴリスト
       let randomBpm = 120;
       let aspectRatio = "16:9"; // デフォルトのアスペクト比
+      let invertColor = false;
+      let invertColorBPM = null;
 
       // メディアファイルをアップロードしてプレビューを表示
       document
@@ -293,6 +314,18 @@
         sendToProjectionWindow();
       }
 
+      document.querySelector("#invertColor").addEventListener("change", (e) => {
+        invertColor = e.target.checked;
+        if (invertColor) {
+          document.getElementById("invertColorBpmControl").style.display =
+            "block";
+        } else {
+          document.getElementById("invertColorBpmControl").style.display =
+            "none";
+        }
+        sendToProjectionWindow();
+      });
+
       // プロジェクションウィンドウを開く
       document
         .getElementById("openProjection")
@@ -325,6 +358,8 @@
           const screenEffect = document.getElementById("screenEffect").value;
           const effect2 = document.getElementById("effect2").value;
           randomBpm = document.getElementById("randomBpm").value;
+          invertColorBPM =
+            document.getElementById("invertColorBpm").value || null;
           aspectRatio = document.getElementById("aspectRatio").value;
           const data = {
             mediaFile: selectedMedia,
@@ -336,6 +371,8 @@
             randomBpm: randomBpm,
             mediaList: mediaList,
             aspectRatio: aspectRatio,
+            invertColor,
+            invertColorBPM,
           };
           projectionWindow.postMessage(data, "*");
         }
