--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>settings</title>
     <link rel="stylesheet" href="./style/index.css" />
+    <script src="./script/common.js"></script>
   </head>
   <body>
     <h1>VJ Settings</h1>
