--- a/projection.html
+++ b/projection.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projection</title>
     <link rel="stylesheet" href="style/projection.css" />
+    <script src="./script/common.js"></script>
   </head>
   <body>
     <!-- メディアファイル表示用 -->
