Feature: add "Single" screen effect

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <label for="screenEffect">Select Screen Effect:</label>
       <select id="screenEffect" onchange="sendToProjectionWindow()">
         <option value="none">None</option>
+        <option value="single">Single</option>
         <option value="continuous">Tile</option>
       </select>
     </div>
