--- a/projection.html
+++ b/projection.html
@@ -8,16 +8,13 @@
     <script src="./script/common.js"></script>
   </head>
   <body>
-    <!-- メディアファイル表示用 -->
-    <img id="mediaElement" src="" alt="Media Display" />
-
     <!-- ロゴ表示用 -->
     <img id="logoElement" src="" alt="Logo Display" />
 
     <!-- テキスト表示用 -->
     <div id="displayText"></div>
 
-    <div id="tiles"></div>
+    <div id="media"></div>
 
     <script src="./script/projection.js"></script>
   </body>
